# orloj

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
examples/: __init__.py  async.py  hello.py
orloj/: __init__.py  core.py
src/: __init__.py  core.py
src/orloj/: __init__.py  core.py
static/: orloj.base64
tests/: __init__.py  countdown.py
