[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']


[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true


[tool.poetry]
authors = [ 'Sitt Guruvanich <aekazitt+github@gmail.com>' ]
description = 'Scheduler middleware for ASGI frameworks'
license = 'MIT'
name = 'orloj'
packages = [{ from='src', include='orloj' }]
readme = 'README.md'
version = '0.1.3'


[tool.poetry.dependencies]
APScheduler = '>=4.0.0a4,<5.0.0'
python = '^3.8'
starlette = '<0.37.2'


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
mypy = '^1.7.1'
pytest = '^7.4.3'
ruff = "^0.4.4"


[tool.poetry.group.examples]
optional = true


[tool.poetry.group.examples.dependencies]
fastapi = '^0.109.0'
uvicorn = '^0.15.0'


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py39'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = [ 'F401' ]  # Ignore unused imports
