[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[project]
authors = [
  { email = 'aekazitt+github@gmail.com', name = 'Sitt Guruvanich' },
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Web Environment',
  'Framework :: AsyncIO',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3 :: Only',
  'Operating System :: OS Independent',
  'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
  'Typing :: Typed',
]
dependencies = [
  'APScheduler >=4.0.0a5,<5.0.0',
  'starlette <0.37.2',
]
description = 'Scheduler middleware for ASGI frameworks'
keywords = [
  'asgi',
  'blacksheep',
  'fastapi',
  'litestar',
  'quart',
  'sanic',
  'starlette',
  'uvicorn',
]
license = 'MIT'
name = 'orloj'
packages = [{ from='src', include='orloj' }]
readme = 'README.md'
requires-python = '>=3.8'
version = '0.1.4'


[project.optional-dependencies]
examples = [
  'fastapi >=0.109.0',
  'uvicorn >=0.15.0',
]


[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = '--strict-markers --tb=short -s -rxXs'
filterwarnings = [ 'ignore::DeprecationWarning' ]
python_files = '*.py'
testpaths = [ 'tests' ]


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py39'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = [ 'F401' ]  # Ignore unused imports


[tool.uv]
dev-dependencies = [
  'fastapi >=0.109.0',
  'httpx >=0.27.0',
  'mypy >=1.7.1',
  'pytest >=7.4.3',
  'ruff >=0.4.4',
]
